<resources>
    <string name="app_name">Dressy</string>

    <!--general-->
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="done">Done</string>
    <string name="my_items">My Items</string>
    <string name="closets">My Closets</string>
    <string name="outfits">My Outfits</string>
    <string name="calendar">My Calendar</string>
    <string name="date_placeholder">displayDate</string>
    <string name="delete">Delete</string>

    <!--access-->
    <string name="or">OR</string>

    <!--sign_up-->
    <string name="motto">Don\'t be messy. Get Dressy.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="existing_acct">Already have an account? <b>Log In</b></string>

    <!--sign_in-->
    <string name="remember">Remember Me</string>
    <string name="no_account">Don\'t have an account? <b>Sign Up</b></string>

    <!--create an outfit-->
    <string name="create_outfit">Create an Outfit</string>
    <string name="outfit_placeholder">ex. Date Night</string>
    <string name="outfit_name">Outfit Name:</string>
    <string name="outfit_hint">[outfitName]</string>


    <!--create a closet-->
    <string name="create_closet">Create a Closet</string>
    <string name="closet_placeholder">ex. Winter Clothes</string>
    <string name="closet_name">Closet Name:</string>
    <string name="closet_hint">[closetName]</string>

    <!--content description-->
    <string name="back_arrow">Grey arrow that navigates backwards in the app.</string>
    <string name="add_button">Grey plus within a circle to add things.</string>
    <string name="fwd_arrow">Grey arrow that navigates to the next screen in the app.</string>
    <string name="closet_home">Image btn for closet.</string>
    <string name="outfit_home">Image btn for an outfit.</string>
    <string name="closet_Btn">Btn to create closet.</string>
    <string name="edit_btn">Edit btn to edit an existing outfit or save changes to an outfit.</string>
    <string name="canvas_view">Canvas for the user to drag and drop outfit items.</string>
    <string name="delete_btn">Image btn to delete contents of an outfit.</string>
    <string name="dressy_btn">Image btn to add an outfit to a calendar date.</string>
    <string name="add_camera">Image btn to add an item from camera.</string>
    <string name="add_gallery">Image btn to add an item from gallery.</string>

    <!--date examples-->
    <string name="date1">Nov 11</string>
    <string name="day1">Fri</string>
    <string name="date2">Nov 12</string>
    <string name="day2">Sat</string>
    <string name="date3">Nov 13</string>
    <string name="day3">Sun</string>
    <string name="date4">Nov 14</string>
    <string name="day4">Mon</string>
    <string name="date5">Nov 15</string>
    <string name="day5">Tues</string>

    <!--menu-->
    <string name="home">Home</string>
    <string name="home_closets">Closets</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="home_outfits">Outfits</string>

</resources>