<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".home">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closets"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="146dp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="350dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="177dp">

        <LinearLayout
            android:id="@+id/MyClosets"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/newclosetbtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:contentDescription="@string/create_closet"
                app:srcCompat="@drawable/ic_create_closet" />
        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outfits"
        tools:ignore="TextContrastCheck"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="316dp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView2"
        android:layout_width="350dp"
        android:layout_height="100dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="346dp">

        <LinearLayout
            android:id="@+id/MyOutfits"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/newoutfitbtn"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="@drawable/layout_buttons"
                android:contentDescription="@string/outfit_home"
                app:srcCompat="@drawable/ic_create_outfit"
                tools:ignore="InefficientWeight" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/calendarClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/calendar"
        tools:ignore="KeyboardInaccessibleWidget,TextContrastCheck"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="484dp" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView3"
        android:layout_width="350dp"
        android:layout_height="110dp"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="515dp">


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="110dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:background="@color/baby_blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="15dp"
                    android:text="@string/date1" />

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@drawable/layout_buttons"
                    app:srcCompat="@drawable/get_dressy_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:background="@color/light_blue">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="15dp"
                    android:text="@string/date2" />

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@drawable/layout_buttons"
                    app:srcCompat="@drawable/get_dressy_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:background="@color/pink">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="15dp"
                    android:text="@string/date3" />

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@drawable/layout_buttons"
                    app:srcCompat="@drawable/get_dressy_btn" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:background="@color/pastel_pink">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="15dp"
                    android:text="@string/date4" />

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@drawable/layout_buttons"
                    app:srcCompat="@drawable/get_dressy_btn" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="110dp"
                android:layout_marginLeft="10dp"
                android:background="@color/pastel_purple">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="15dp"
                    android:text="@string/date5" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:background="@drawable/layout_buttons"
                    app:srcCompat="@drawable/get_dressy_btn" />
            </RelativeLayout>


        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>