<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/create_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createOutfit">

    <TextView
        android:id="@+id/outfitHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="193dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="51dp"
        android:text="@string/create_outfit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/outfitParagraph"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outfitParagraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="268dp"
        android:text="@string/outfit_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outfitHeader"
        tools:ignore="TextContrastCheck" />

    <!--use intent to get user input and display it on the next screen-->
    <EditText
        android:id="@+id/outfitInput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/buttons"
        android:hint="@string/outfit_placeholder"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/outfitDoneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outfitParagraph"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/outfitDoneBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="273dp"
        android:background="@drawable/buttons"
        android:backgroundTint="@color/lavender"
        android:text="@string/done"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outfitInput"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>