<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".sign_in">

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/dark_blue"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@id/loginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error: email is invalid"
        android:textColor="#FF3A3A"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/divider3"
        android:layout_marginTop="30dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/loginEmailHint"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/access_buttons"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
       android:layout_centerHorizontal="true"
        android:layout_below="@+id/login"
        android:layout_marginTop="20dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/loginPwdHint"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:background="@drawable/access_buttons"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:password="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginEmailHint"
        android:layout_marginTop="10dp"
        tools:ignore="TextContrastCheck" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/white"
        android:text="@string/remember"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginBtn"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/access_buttons"
        android:backgroundTint="@color/lavender"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginPwdHint"
        android:layout_marginTop="10dp"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

    <View
        android:id="@+id/divider3"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/checkBox"/>

    <TextView
        android:id="@+id/existingAcct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/no_account"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/divider3"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/loginError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider3"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />


</RelativeLayout>